# vzenith_tcp_protocol

./: .gitmodules  .linthub.yml  .travis.yml  CMakeLists.txt  README.md
doc/: design.md  design.vsdx
src/: CMakeLists.txt
src/base/: asyncfile.cpp  asyncfile.h  asyncsocket.cpp  asyncsocket.h  base64.cpp  base64.h  basictypes.h  buffer.h  bytebuffer.cpp  bytebuffer.h  byteorder.h  common.cpp  common.h  constructormagic.h  criticalsection.h  helpmethods.cpp  helpmethods.h  ipaddress.cpp  ipaddress.h  logging.cpp  logging.h  maccocoathreadhelper.h  maccocoathreadhelper.mm  nethelpers.cpp  nethelpers.h  noncopyable.h  scoped_autorelease_pool.h  scoped_autorelease_pool.mm  scoped_ptr.h  scoped_ref_ptr.h  sha1.cpp  sha1.h  shared_ptr.h  signalthread.cpp  signalthread.h  sigslot.h  socket.h  socketaddress.cpp  socketaddress.h  socketfactory.h  (+17 more)
src/event/: messagehandler.cpp  messagehandler.h  messagequeue.cpp  messagequeue.h  physicalsocketserver.cpp  physicalsocketserver.h  thread.cpp  thread.h
src/vzsdk/: commandanalysis.cpp  commandanalysis.h  commfunc.h  internalmessage.cpp  internalmessage.h  queuelayer.cpp  queuelayer.h  session.cpp  session.h  sessionmanager.cpp  sessionmanager.h  task.cpp  task.h  vzclientsdk_commondefine.h  vzclientsdk_lpdefine.h  vzconnectdev.cpp  vzconnectdev.h  vziodev.cpp  vziodev.h  vzlprtcpsdk.cpp  vzlprtcpsdk.h  vzlprtcpsdkdefine.h  vzmaintendev.cpp  vzmaintendev.h  vzmodulebase.cpp  vzmodulebase.h  vzrecognition.cpp  vzrecognition.h  vzsdkbase.h  vzsdkdefines.h  vzsdkpushhandle.cpp  vzsdkpushhandle.h  vzsdkpushmanager.cpp  vzsdkpushmanager.h  vzsdkservice.cpp  vzsdkservice.h  vzsdkservices.cpp  vzsdkservices.h  vzserialdev.cpp  vzserialdev.h  (+4 more)
test/boost_test/: CMakeLists.txt  boost_test_main.cpp
test/connected_test/: CMakeLists.txt
test/libevent_test/: CMakeLists.txt  libevent_test_main.cpp
test/sdk_test/: CMakeLists.txt  sdk_test_main.cpp
test/session_test/: CMakeLists.txt  session_test_main.cpp
test/thead_test/: CMakeLists.txt  thead_test_main.cpp
test/unit_test/: CMakeLists.txt  base64_unittest.cpp  basictypes_unittest.cpp  buffer_unittest.cpp  bytebuffer_unittest.cpp  byteorder_unittest.cpp  gunit.h  sigslot_unittest.cpp  stream_unittest.cpp  stringencode_unittest.cpp  stringutils_unittest.cpp  timeutils_unittest.cpp  unittest_main.cpp  win32_unittest.cpp
third_part/boost/: boost_settings.hpp
valgrind_test/: valgrind_test.sh
